--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import-normalize; /* bring in normalize.css styles */
+/* @import-normalize; bring in normalize.css styles */
 
 body {
   margin: 0;
@@ -39,7 +39,9 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+  fill: #8f6934;
 }
+
 
 .container {
   max-width: 530px;
